# grapevine

./: .envrc  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  book.toml  clippy.toml  complement-baseline.tsv  engage.toml  flake.nix  rust-toolchain.toml  rustfmt.toml
book/: SUMMARY.md  changelog.md  code-of-conduct.md  contributing.md  introduction.md
complement/: Dockerfile
nix/: shell.nix
nix/modules/default/: default.nix
nix/pkgs/complement/: default.nix
nix/pkgs/complement-grapevine-oci-image/: config.toml  default.nix
nix/pkgs/default/: default.nix
src/: api.rs  args.rs  clap.rs  config.rs  database.rs  error.rs  main.rs  observability.rs  service.rs  utils.rs
src/api/: appservice_server.rs  client_server.rs  ruma_wrapper.rs  server_server.rs
src/api/client_server/: account.rs  alias.rs  backup.rs  capabilities.rs  config.rs  context.rs  device.rs  directory.rs  filter.rs  keys.rs  media.rs  membership.rs  message.rs  mod.rs  profile.rs  push.rs  read_marker.rs  redact.rs  relations.rs  report.rs  room.rs  search.rs  session.rs  space.rs  state.rs  sync.rs  tag.rs  thirdparty.rs  threads.rs  to_device.rs  typing.rs  unversioned.rs  user_directory.rs  voip.rs
src/api/ruma_wrapper/: axum.rs
src/api/server_server/: resolution.rs  send_request.rs
src/config/: env_filter_clone.rs  mod.rs  proxy.rs
src/database/: abstraction.rs  key_value.rs  map.rs  mod.rs
src/database/abstraction/: rocksdb.rs  sqlite.rs  watchers.rs
src/database/key_value/: account_data.rs  appservice.rs  globals.rs  key_backups.rs  media.rs  pusher.rs  rooms.rs  sending.rs  sso.rs  transaction_ids.rs  uiaa.rs  users.rs
src/database/key_value/rooms/: alias.rs  auth_chain.rs  directory.rs  edus.rs  lazy_load.rs  metadata.rs  outlier.rs  pdu_metadata.rs  search.rs  short.rs  state.rs  state_accessor.rs  state_cache.rs  state_compressor.rs  threads.rs  timeline.rs  user.rs
src/database/key_value/rooms/edus/: read_receipt.rs
src/database/map/: tests.rs
src/database/map/tests/: conversions.rs
src/service/: account_data.rs  admin.rs  appservice.rs  globals.rs  key_backups.rs  media.rs  mod.rs  pdu.rs  pusher.rs  rooms.rs  sending.rs  server_backoff.rs  sso.rs  transaction_ids.rs  uiaa.rs  users.rs
src/service/account_data/: data.rs
src/service/admin/: appservices.rs  clear_service_caches.rs  command.rs  common.rs  create_user.rs  deactivate_all.rs  deactivate_user.rs  disable_room.rs  enable_room.rs  federation.rs  get_auth_chain.rs  get_pdu.rs  incoming_federation.rs  list_appservices.rs  list_local_users.rs  list_rooms.rs  memory_usage.rs  mod.rs  parse_pdu.rs  register_appservice.rs  reset_password.rs  rooms.rs  server.rs  show_config.rs  sign_json.rs  unregister_appservice.rs  users.rs  verify_json.rs
src/service/appservice/: data.rs
src/service/globals/: data.rs  mod.rs
src/service/key_backups/: data.rs
src/service/media/: data.rs
src/service/pusher/: data.rs
src/service/rooms/: alias.rs  auth_chain.rs  directory.rs  edus.rs  event_handler.rs  lazy_loading.rs  metadata.rs  outlier.rs  pdu_metadata.rs  search.rs  short.rs  spaces.rs  state.rs  state_accessor.rs  state_cache.rs  state_compressor.rs  threads.rs  timeline.rs  user.rs
src/service/rooms/alias/: data.rs
src/service/rooms/auth_chain/: data.rs
src/service/rooms/directory/: data.rs
src/service/rooms/edus/: read_receipt.rs  typing.rs
src/service/rooms/edus/read_receipt/: data.rs
src/service/rooms/lazy_loading/: data.rs
src/service/rooms/metadata/: data.rs
src/service/rooms/outlier/: data.rs
src/service/rooms/pdu_metadata/: data.rs
src/service/rooms/search/: data.rs
src/service/rooms/short/: data.rs
src/service/rooms/state/: data.rs
src/service/rooms/state_accessor/: data.rs
src/service/rooms/state_cache/: data.rs
src/service/rooms/state_compressor/: data.rs
src/service/rooms/threads/: data.rs
src/service/rooms/timeline/: data.rs  mod.rs
src/service/rooms/user/: data.rs
src/service/sending/: data.rs
src/service/sso/: data.rs
src/service/transaction_ids/: data.rs
src/service/uiaa/: data.rs
src/service/users/: data.rs
src/utils/: error.rs  filter.rs  membership.rs  on_demand_hashmap.rs  query.rs
xtask/: Cargo.toml
xtask/src/: complement.rs  main.rs
xtask/src/complement/: docker.rs  summary.rs  test2json.rs
