[package]
name = "xtask"
version = "0.1.0"
edition = "2021"
license.workspace = true
rust-version.workspace = true

[dependencies]
clap.workspace = true
miette.workspace = true
process-wrap.workspace = true
indicatif.workspace = true
serde.workspace = true
serde_json.workspace = true
signal-hook.workspace = true
strum.workspace = true
xshell.workspace = true

[lints]
workspace = true
